Messed around with overflow, but fix needs more work for mobile.

--- a/css/default.css
+++ b/css/default.css
@@ -53,7 +53,6 @@ table {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    overflow: scroll;
     padding-top: 7px;
     padding-bottom: 7px;
 }
